SIGSEGV in libfontconfig.so starting from jdk7b33

XMLWordPrintable

    • 2d
    • b33
    • 7
    • b43
    • generic, x86
    • linux, solaris_nevada

      The following test case

      ----------- test.java -------------
      import java.io.PrintStream;
      import java.awt.Toolkit;

      public class test{

          public static void main( String argv[] ) throws Exception {
              System.exit(run(argv, System.out));
          }

          public static int run(String args[], PrintStream out) {
              java.awt.Toolkit.getDefaultToolkit().getSystemClipboard();
              return 0;
          }
      }
      ---------------------------------

      crashes with SIGSEGV in libfontconfig.so:
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0xcfcbaa2d, pid=17406, tid=4147043232
      #
      # Java VM: Java HotSpot(TM) Server VM (14.0-b05 mixed mode linux-x86 )
      # Problematic frame:
      # C [libfontconfig.so.1+0x10a2d] FcCharSetGetNumbers+0x1d

      The crash started to appear from jdk7b33 and is seen only on SuSe 10.1

            Assignee:
            Philip Race
            Reporter:
            Ekaterina Pavlova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: