6764543: SIGSEGV in libfontconfig.so starting from jdk7b33

Reviewed-by: campbell, igor